# zeek-agent

./: .ci_entry_point.sh  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
components/: CMakeLists.txt
components/zeekaudisp/: CMakeLists.txt
components/zeekaudisp/include/zeek/: iaudispconsumer.h
components/zeekaudisp/src/: audispconsumer.cpp  audispconsumer.h  audispsocketreader.cpp  audispsocketreader.h  audit_utils.cpp  audit_utils.h  auparseinterface.cpp  auparseinterface.h  iaudispproducer.h  iauparseinterface.h
components/zeekaudisp/tests/: audisp_events.cpp  audisp_records.cpp  audispconsumer.cpp  audit_utils.cpp  mockedaudispproducer.cpp  mockedaudispproducer.h  mockedauparseinterface.cpp  mockedauparseinterface.h
components/zeekconfiguration/: CMakeLists.txt
components/zeekconfiguration/include/zeek/: izeekconfiguration.h
components/zeekconfiguration/src/: configurationchecker.cpp  configurationchecker.h  zeekconfiguration.cpp  zeekconfiguration.h  zeekconfigurationtableplugin.cpp  zeekconfigurationtableplugin.h
components/zeekconfiguration/tests/: configurationchecker.cpp  zeekconfiguration.cpp
components/zeekdatabase/: CMakeLists.txt
components/zeekdatabase/include/zeek/: ivirtualdatabase.h  ivirtualtable.h
components/zeekdatabase/src/: sqlite_utils.cpp  sqlite_utils.h  virtualdatabase.cpp  virtualdatabase.h  virtualtablemodule.cpp  virtualtablemodule.h  zeektablelisttableplugin.cpp  zeektablelisttableplugin.h
components/zeekdatabase/tests/: testtable.h  virtualdatabase.cpp  virtualtablemodule.cpp
components/zeekendpointsecurity/: CMakeLists.txt
components/zeekendpointsecurity/include/zeek/: iendpointsecurityconsumer.h
components/zeekendpointsecurity/src/: endpointsecurityconsumer.cpp  endpointsecurityconsumer.h
components/zeekendpointsecurity/tests/: endpointsecurityconsumer.cpp
components/zeeklogger/: CMakeLists.txt
components/zeeklogger/include/zeek/: izeeklogger.h
components/zeeklogger/src/: zeeklogger.cpp  zeeklogger.h  zeekloggertableplugin.cpp  zeekloggertableplugin.h
components/zeekopenbsm/: CMakeLists.txt
components/zeekopenbsm/include/zeek/: iopenbsmconsumer.h
components/zeekopenbsm/src/: openbsm_utils.cpp  openbsm_utils.h  openbsmconsumer.cpp  openbsmconsumer.h
components/zeekopenbsm/tests/: openbsmconsumer.cpp
components/zeekosqueryinterface/: CMakeLists.txt
components/zeekosqueryinterface/include/zeek/: iosqueryinterface.h
components/zeekosqueryinterface/src/: osqueryinterface.cpp  osqueryinterface.h  osquerytableplugin.cpp  osquerytableplugin.h  utils.cpp  utils.h
components/zeekservicemanager/: CMakeLists.txt
components/zeekservicemanager/src/: zeekservicemanager.cpp  zeekservicemanager.h  zeekservicemanagertableplugin.cpp  zeekservicemanagertableplugin.h
components/zeekutils/: CMakeLists.txt
components/zeekutils/src/: system_identifiers.cpp  time.cpp  uuid.cpp
documentation/: CMakeLists.txt  doxygen.conf.inc  install.cmake
libraries/: CMakeLists.txt
libraries/actor-framework/: CMakeLists.txt
libraries/audit/: CMakeLists.txt
libraries/audit/include/: libaudit_wrapper.h
libraries/broker/: CHANGES  CMakeLists.txt  CONTRIBUTING.md  COPYING  Makefile  NEWS  README  VERSION  configure
libraries/broker-legacy/: CMakeLists.txt
libraries/broker-lts/: CMakeLists.txt
libraries/broker/doc/: CMakeLists.txt  comm.rst  conf.py  data.rst  index.rst  overview.rst  python.rst  stores.rst
libraries/broker/docs/: requirements.txt
libraries/broker/tests/: CMakeLists.txt
libraries/catch2/: CMakeLists.txt
libraries/clang-tidy/include/: compat.h
libraries/googletest/: CMakeLists.txt
libraries/openssl/: CMakeLists.txt
libraries/rapidjson/: CMakeLists.txt
libraries/rocksdb/: CMakeLists.txt
libraries/sqlite/: CMakeLists.txt
libraries/xxhash/: CMakeLists.txt
libraries/zlib/: CMakeLists.txt
packaging/: CMakeLists.txt
packaging/cmake/: linux.cmake
packaging/config/: 10-zeek_agent.sample.rules  com.corelight.zeek-agent-osquery.plist.inc  com.corelight.zeek-agent.plist.inc  config.sample.json  zeek-agent-osquery.service.inc  zeek-agent.service.inc
packaging/docs/: macOS_README.txt
tables/: CMakeLists.txt
tables/audisp/: CMakeLists.txt
tables/audisp/src/: audispservice.cpp  audispservice.h  audispservicefactory.cpp  fileeventstableplugin.cpp  fileeventstableplugin.h  processeventstableplugin.cpp  processeventstableplugin.h  socketeventstableplugin.cpp  socketeventstableplugin.h
tables/audisp/tests/: fileeventstableplugin.cpp  processeventstableplugin.cpp  socketeventstableplugin.cpp  utils.cpp
tables/endpointsecurity/: CMakeLists.txt
tables/endpointsecurity/src/: endpointsecurityservice.cpp  endpointsecurityservice.h  endpointsecurityservicefactory.cpp  fileeventstableplugin.cpp  fileeventstableplugin.h  processeventstableplugin.cpp  processeventstableplugin.h
tables/endpointsecurity/tests/: fileeventstableplugin.cpp  processeventstableplugin.cpp
tables/host_information/: CMakeLists.txt
tables/host_information/src/: hostinformationtableplugin.cpp  hostinformationtableplugin.h  osversion.h  osversion_linux.cpp  osversion_macos.mm  osversion_windows.cpp
tables/openbsm/: CMakeLists.txt
tables/openbsm/src/: openbsmservice.cpp  openbsmservice.h  openbsmservicefactory.cpp  socketeventstableplugin.cpp  socketeventstableplugin.h
tables/openbsm/tests/: socketeventstableplugin.cpp
zeek-extension/: CMakeLists.txt
zeek-extension/src/: configurationchecker.cpp  configurationchecker.h  globals.cpp  globals.h  main.cpp  zeekconfiguration.cpp  zeekconfiguration.h  zeekdistributedplugin.cpp  zeekdistributedplugin.h  zeekloggerplugin.cpp  zeekloggerplugin.h
zeek-extension/tests/: CMakeLists.txt  configuration_checker.cpp
zeek-remote/: CMakeLists.txt
zeek-remote/include/zeek-remote/: ibrokermanager.h  iquerymanager.h  types.h  utils.h
zeek-remote/src/: brokermanager.cpp  brokermanager.h  idatabaseinterface.h  querymanager.cpp  querymanager.h  types.cpp  utils.cpp
zeek-remote/tests/: CMakeLists.txt  broker_manager.cpp  query_manager.cpp
(+198 files in other folders)
